# asr_nmt_serve

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/instructions/: architect.instructions.md
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_callback_url.py
docs/: schema_reference.py
k8s/: README.md  api.yaml  celery-beat.yaml  configmap.yaml  hpa.yaml  kustomization.yaml  minio.yaml  namespace.yaml  network-policy.yaml  postgres.yaml  redis.yaml  secrets.yaml  worker-cpu.yaml  worker-gpu.yaml
scripts/: build-images.ps1  build-images.sh  create_admin_key.py  deploy-k8s.sh  test_models.py
src/: __init__.py  config.py  main.py  worker.py
src/api/: auth.py  health.py  jobs.py
src/auth/: security.py
src/db/: models.py  session.py
src/middleware/: rate_limit.py
src/schemas/: schemas.py
src/services/: asr.py  job_service.py  storage.py
tests/: conftest.py  test_api.py
